hphp/hack/test/typecheck/tc_in_enum_class.php.constraint_method_call.exp
ERROR: File "tc_in_enum_class.php", line 76, characters 5-11:
This generic parameter is redundant because it only appears in a contravariant (input) position. Consider replacing uses of generic parameter with `IAntGetter<AntChild, TValue>` or specifying `<<__Explicit>>` on the generic parameter (Typing[4366])
ERROR: File "tc_in_enum_class.php", line 89, characters 40-46:
This generic parameter is redundant because it only appears in a contravariant (input) position. Consider replacing uses of generic parameter with `IAntGetter<TSource, TValue>` or specifying `<<__Explicit>>` on the generic parameter (Typing[4366])
ERROR: File "tc_in_enum_class.php", line 103, characters 10-24:
Typing error (Typing[4110])
  File "tc_in_enum_class.php", line 47, characters 23-25:
  Expected `int`
  File "tc_in_enum_class.php", line 91, characters 29-44:
  But got `<expr#8>::T::TSource`
  File "tc_in_enum_class.php", line 91, characters 38-44:
  This type argument to `IAntGetter` only allows supertypes (it is contravariant)
ERROR: File "tc_in_enum_class.php", line 103, characters 10-24:
Typing error (Typing[4110])
  File "tc_in_enum_class.php", line 47, characters 23-25:
  Expected `int`
  File "tc_in_enum_class.php", line 91, characters 29-44:
  But got `IAntParent::T::TSource`
  File "tc_in_enum_class.php", line 91, characters 38-44:
  This type argument to `IAntGetter` only allows supertypes (it is contravariant)
ERROR: File "tc_in_enum_class.php", line 103, characters 10-24:
Typing error (Typing[4110])
  File "tc_in_enum_class.php", line 47, characters 23-25:
  Expected `int`
  File "tc_in_enum_class.php", line 91, characters 29-44:
  But got `ParentAccessors::TSource`
  File "tc_in_enum_class.php", line 91, characters 38-44:
  This type argument to `IAntGetter` only allows supertypes (it is contravariant)
ERROR: File "tc_in_enum_class.php", line 103, characters 10-24:
Typing error (Typing[4110])
  File "tc_in_enum_class.php", line 47, characters 23-25:
  Expected `int`
  File "tc_in_enum_class.php", line 91, characters 29-44:
  But got `mixed`
  File "tc_in_enum_class.php", line 91, characters 38-44:
  This type argument to `IAntGetter` only allows supertypes (it is contravariant)
ERROR: File "tc_in_enum_class.php", line 103, characters 20-23:
Invalid argument (Typing[4110])
  File "tc_in_enum_class.php", line 103, characters 20-23:
  Expected a class with a constant `Bar`
  File "tc_in_enum_class.php", line 90, characters 24-30:
  But got `<expr#8>::T`
  File "tc_in_enum_class.php", line 103, characters 10-13:
    where `<expr#8>` is a reference to this expression
